--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,18 +10,6 @@ if(NOT is_multi_config AND NOT (CMAKE_BUILD_TYPE OR DEFINED ENV{CMAKE_BUILD_TYPE
   set(CMAKE_BUILD_TYPE Release CACHE STRING "Release default")
 endif()
 
-# Try to find OpenMP package (if installed)
-find_package(OpenMP COMPONENTS CXX)
-
-# Display warning and error levels
-if (MSVC)
-    # warning level 4 (and all warnings as errors, /WX)
-    add_compile_options(/W4)
-else()
-    # lots of warnings and all warnings as errors
-    add_compile_options(-Wall -Wextra -pedantic)
-endif()
-
 # Get development version of ultimaille directly from git repository 
 include(FetchContent)
 FetchContent_Declare(
@@ -38,8 +26,6 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(param_parser)
 
-message(${ultimaille_SOURCE_DIR})
-message(${param_parser_SOURCE_DIR})
 # Add ultimaille directory to get ultimaille CMakeLists
 include_directories(${ultimaille_SOURCE_DIR})
 include_directories(${param_parser_SOURCE_DIR})
@@ -47,5 +33,13 @@ include_directories(${param_parser_SOURCE_DIR})
 # Add executable binary
 add_executable(delete_face_addon delete_face_addon.cpp)
 
-# Link binary with ultimaille
-target_link_libraries(delete_face_addon  ${CMAKE_DL_LIBS} param-parser ultimaille m $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
+# Link binary with ultimaille / param-parser
+target_link_libraries(delete_face_addon  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
+
+IF (NOT WIN32)
+	target_link_libraries(delete_face_addon m)
+ENDIF()
+
+
+
+file(COPY assets/catorus.geogram DESTINATION .)
