--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -35,17 +35,15 @@ jobs:
       run: build/delete_face_addon model=build/catorus.geogram facet_index=0
 
     -
-      env:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       name: Deploy
       uses: xresloader/upload-to-github-release@v1
       with:
+        tags: true
         draft: false
-        file: build/*
+        file: build/delete_face_addon
         overwrite: true
         update_latest_release: true
         verbose: true
-      if: "startsWith(github.ref, 'refs/tags/')"
 
 
   windows-msvc:
@@ -70,3 +68,14 @@ jobs:
 
     - name: Debug run
       run: build/Debug/delete_face_addon.exe model=build/catorus.geogram facet_index=0
+
+    -
+      name: Deploy
+      uses: xresloader/upload-to-github-release@v1
+      with:
+        tags: true
+        draft: false
+        file: build/delete_face_addon.exe
+        overwrite: true
+        update_latest_release: true
+        verbose: true
