Append OS name into the executable name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(graphite-addon-examples LANGUAGES C CXX )
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+message("OSName=" ${OSName})
+
 # Get config
 get_property(is_multi_config GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
 if(NOT is_multi_config AND NOT (CMAKE_BUILD_TYPE OR DEFINED ENV{CMAKE_BUILD_TYPE}))
@@ -40,6 +42,11 @@ IF (NOT WIN32)
 	target_link_libraries(delete_face_addon m)
 ENDIF()
 
+set_target_properties(
+    delete_face_addon
+    PROPERTIES 
+        OUTPUT_NAME "delete_facet_addon-${OSName}"
+)
 
 
 file(COPY assets/catorus.geogram DESTINATION .)
