--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -26,13 +26,13 @@ jobs:
         submodules: recursive
 
     - name: Configure CMake
-      run: cmake -B build -DCMAKE_BUILD_TYPE=${{ matrix.config }}
+      run: cmake -B build -DCMAKE_BUILD_TYPE=${{ matrix.config }} -DOSName=${{ matrix.cfg.os }}
 
     - name: CMake Build
       run: cmake --build build --parallel
 
     - name: Run executable
-      run: build/delete_face_addon model=build/catorus.geogram facet_index=0
+      run: build/delete_facet_addon-${{ matrix.cfg.os }} model=build/catorus.geogram facet_index=0
 
     -
       name: Deploy
@@ -40,7 +40,7 @@ jobs:
       with:
         tags: true
         draft: false
-        file: build/delete_face_addon
+        file: build/delete_facet_addon-${{ matrix.cfg.os }}
         overwrite: true
         update_latest_release: true
         verbose: true
@@ -55,19 +55,19 @@ jobs:
         submodules: recursive
 
     - name: Configure CMake
-      run: cmake -B build
+      run: cmake -B build -DOSName=win
 
     - name: Release build
       run: cmake --build build --parallel --config Release
 
     - name: Release run
-      run: build/Release/delete_face_addon.exe model=build/catorus.geogram facet_index=0
+      run: build/Release/delete_facet_addon-win.exe model=build/catorus.geogram facet_index=0
 
     - name: Debug build
       run: cmake --build build --parallel --config Debug
 
     - name: Debug run
-      run: build/Debug/delete_face_addon.exe model=build/catorus.geogram facet_index=0
+      run: build/Debug/delete_facet_addon-win.exe model=build/catorus.geogram facet_index=0
 
     -
       name: Deploy
@@ -75,7 +75,7 @@ jobs:
       with:
         tags: true
         draft: false
-        file: build/delete_face_addon.exe
+        file: build/Release/delete_facet_addon-win.exe
         overwrite: true
         update_latest_release: true
         verbose: true
