--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -10,8 +10,7 @@ jobs:
   linux-mac:
     strategy:
       matrix:
-        cfg: [{os: ubuntu-latest, cxx: gcc-13},
-              # {os: ubuntu-latest, cxx: g++-9},
+        cfg: [{os: ubuntu-latest, cxx: g++-9},
               {os: macos-latest, cxx: clang++}]
         # config: [Release, Debug]
         config: [Release]
