--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ FetchContent_MakeAvailable(ultimaille)
 FetchContent_Declare(
   param_parser
   GIT_REPOSITORY https://github.com/ultimaille/param-parser
-  GIT_TAG        master
+  GIT_TAG        v1.0.0
 )
 FetchContent_MakeAvailable(param_parser)
 
