Add an example that subdivise (split) a hex layer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,16 +39,19 @@ include_directories(${param_parser_SOURCE_DIR})
 add_executable(delete_facet_addon delete_face_addon.cpp)
 add_executable(smoother_addon smoother_addon.cpp)
 add_executable(hex_layer_select hex_layer_select.cpp)
+add_executable(hex_layer_split hex_layer_split.cpp)
 
 # Link binary with ultimaille / param-parser
 target_link_libraries(delete_facet_addon  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
 target_link_libraries(smoother_addon  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
 target_link_libraries(hex_layer_select  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
+target_link_libraries(hex_layer_split  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
 
 IF (NOT WIN32)
 	target_link_libraries(delete_facet_addon m)
 	target_link_libraries(smoother_addon m)
 	target_link_libraries(hex_layer_select m)
+	target_link_libraries(hex_layer_split m)
 ENDIF()
 
 set_target_properties(
