- Add scaled jacobian metric add-on\n - Add lace select add-on\n - Improve layer subdivide and layer selection add-ons

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,8 @@ include(FetchContent)
 FetchContent_Declare(
   ultimaille
   GIT_REPOSITORY https://github.com/ssloy/ultimaille
-  GIT_TAG        v1.1.0
+  # GIT_TAG        v1.1.0
+  GIT_TAG        geom
 )
 FetchContent_MakeAvailable(ultimaille)
 
@@ -39,19 +40,25 @@ include_directories(${param_parser_SOURCE_DIR})
 add_executable(delete_facet_addon delete_face_addon.cpp)
 add_executable(smoother_addon smoother_addon.cpp)
 add_executable(hex_layer_select hex_layer_select.cpp)
-add_executable(hex_layer_split hex_layer_split.cpp)
+add_executable(hex_layer_subdivide hex_layer_subdivide.cpp)
+add_executable(hex_lace_select hex_lace_select.cpp)
+add_executable(hex_scale_jacobian hex_scale_jacobian.cpp)
 
 # Link binary with ultimaille / param-parser
 target_link_libraries(delete_facet_addon  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
 target_link_libraries(smoother_addon  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
 target_link_libraries(hex_layer_select  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
-target_link_libraries(hex_layer_split  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
+target_link_libraries(hex_layer_subdivide  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
+target_link_libraries(hex_lace_select  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
+target_link_libraries(hex_scale_jacobian  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
 
 IF (NOT WIN32)
 	target_link_libraries(delete_facet_addon m)
 	target_link_libraries(smoother_addon m)
 	target_link_libraries(hex_layer_select m)
-	target_link_libraries(hex_layer_split m)
+	target_link_libraries(hex_layer_subdivide m)
+	target_link_libraries(hex_lace_select m)
+	target_link_libraries(hex_scale_jacobian m)
 ENDIF()
 
 set_target_properties(
