--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -38,14 +38,14 @@ jobs:
       run: build/hex_scaled_jacobian_${{ matrix.cfg.os }} model=build/catorus.geogram
 
     - name: Create archive
-      run: tar -czvf addon_examples_${{ matrix.cfg.os }}.tar.gz build/delete_facet_addon_${{ matrix.cfg.os }} build/smoother_addon_${{ matrix.cfg.os }} build/hex_scaled_jacobian_${{ matrix.cfg.os }} build/lib/*
+      run: tar -czvf addons_${{ matrix.cfg.os }}.tar.gz build/delete_facet_addon_${{ matrix.cfg.os }} build/smoother_addon_${{ matrix.cfg.os }} build/hex_scaled_jacobian_${{ matrix.cfg.os }} build/hex_layer_subdivide_${{ matrix.cfg.os }} build/lib/*
     -
       name: Deploy
       uses: xresloader/upload-to-github-release@v1
       with:
         tags: true
         draft: false
-        file: addon_examples_${{ matrix.cfg.os }}.tar.gz
+        file: addons_${{ matrix.cfg.os }}.tar.gz
         overwrite: false
         update_latest_release: true
         verbose: true
@@ -80,13 +80,16 @@ jobs:
     - name: Debug run - scaled jacobian
       run: build/Debug/hex_scaled_jacobian_win.exe model=build/catorus.geogram
 
+    - name: Create archive
+      run: Compress-Archive -Path build/Release/* -Destination addons_win.zip
+
     -
       name: Deploy
       uses: xresloader/upload-to-github-release@v1
       with:
         tags: true
         draft: false
-        file: build/Release/delete_facet_addon_win.exe;build/Release/smoother_addon_win.exe;build/Release/hex_scaled_jacobian_win.exe
-        overwrite: true
+        file: addons_win.zip
+        overwrite: false
         update_latest_release: true
         verbose: true
