--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,23 +41,23 @@ include_directories(${param_parser_SOURCE_DIR})
 # Add executable binary
 add_executable(delete_facet_addon delete_facet_addon.cpp)
 add_executable(smoother_addon smoother_addon.cpp)
-add_executable(hex_layer_subdivide hex_layer_subdivide.cpp)
-add_executable(hex_scaled_jacobian hex_scaled_jacobian.cpp)
-add_executable(step_loader step_loader.cpp)
+add_executable(hex_layer_subdivide_addon hex_layer_subdivide_addon.cpp)
+add_executable(hex_scaled_jacobian_addon hex_scaled_jacobian_addon.cpp)
+add_executable(step_loader_addon step_loader_addon.cpp)
 
 # Link binary with ultimaille / param-parser
 target_link_libraries(delete_facet_addon  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
 target_link_libraries(smoother_addon  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
-target_link_libraries(hex_layer_subdivide  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
-target_link_libraries(hex_scaled_jacobian  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
-target_link_libraries(step_loader  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
+target_link_libraries(hex_layer_subdivide_addon  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
+target_link_libraries(hex_scaled_jacobian_addon  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
+target_link_libraries(step_loader_addon  ${CMAKE_DL_LIBS} param-parser ultimaille $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
 
 IF (NOT WIN32)
 	target_link_libraries(delete_facet_addon m)
 	target_link_libraries(smoother_addon m)
-	target_link_libraries(hex_layer_subdivide m)
-	target_link_libraries(hex_scaled_jacobian m)
-	target_link_libraries(step_loader m)
+	target_link_libraries(hex_layer_subdivide_addon m)
+	target_link_libraries(hex_scaled_jacobian_addon m)
+	target_link_libraries(step_loader_addon m)
 ENDIF()
 
 if (NOT DEFINED OSName)
@@ -77,15 +77,21 @@ set_target_properties(
 )
 
 set_target_properties(
-  hex_layer_subdivide
+  hex_layer_subdivide_addon
     PROPERTIES 
-        OUTPUT_NAME "hex_layer_subdivide_${OSName}"
+        OUTPUT_NAME "hex_layer_subdivide_addon_${OSName}"
 )
 
 set_target_properties(
-  hex_scaled_jacobian
+  hex_scaled_jacobian_addon
     PROPERTIES 
-        OUTPUT_NAME "hex_scaled_jacobian_${OSName}"
+        OUTPUT_NAME "hex_scaled_jacobian_addon_${OSName}"
+)
+
+set_target_properties(
+  step_loader_addon
+    PROPERTIES 
+        OUTPUT_NAME "step_loader_addon_${OSName}"
 )
 
 
